--- a/scss/_media-queries.scss
+++ b/scss/_media-queries.scss
@@ -1,6 +1,139 @@
 @import 'variables';
 
-// Media Queries
+// Tablet
+@media (min-width: 769px) and (max-width: 1024px) {
+    header {
+        padding: 10px;
+    }
+
+    nav {
+        ul {
+            gap: 18px;
+            margin: 10px 0;
+            flex-wrap: wrap;
+            justify-content: center;
+
+            li {
+                a {
+                    font-size: 16px;
+                }
+            }
+        }
+    }
+
+    .home-content {
+        padding: 20px;
+
+        h1 {
+            font-size: 26px;
+        }
+
+        p {
+            font-size: 15px;
+            max-width: 95%;
+        }
+
+        img {
+            max-width: 95%;
+        }
+
+        .cerezas-img {
+            max-width: 95%;
+        }
+    }
+
+    .history-content {
+        padding: 20px;
+
+        h1 {
+            font-size: 26px;
+        }
+
+        p {
+            font-size: 15px;
+            max-width: 95%;
+        }
+
+        img {
+            max-width: 95%;
+        }
+    }
+
+    .process-content {
+        padding: 20px;
+
+        h1 {
+            font-size: 26px;
+        }
+
+        p {
+            font-size: 15px;
+            max-width: 95%;
+        }
+
+        iframe {
+            max-width: 95%;
+            height: 350px;
+        }
+    }
+
+    .product-content {
+        padding: 20px;
+
+        h1 {
+            font-size: 26px;
+        }
+
+        p {
+            font-size: 15px;
+            max-width: 95%;
+        }
+
+        .product-grid {
+            flex-wrap: wrap;
+            justify-content: center;
+            max-width: 95%;
+            gap: 15px;
+
+            .card {
+                width: 48%;
+                max-width: 20rem;
+            }
+        }
+    }
+
+    .contact-content {
+        padding: 20px;
+
+        h1, h3 {
+            font-size: 26px;
+        }
+
+        p {
+            font-size: 15px;
+            max-width: 95%;
+        }
+
+        iframe {
+            max-width: 95%;
+            height: 350px;
+        }
+    }
+
+    form {
+        width: 95%;
+
+        .form-control {
+            width: 100%;
+        }
+
+        button {
+            width: 60%;
+        }
+    }
+}
+
+// Mobile
 @media (max-width: 768px) {
     header {
         padding: 8px;
